# dldi

./: .clang-format  .clang-tidy  .dockerignore  .envrc  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  readme.md
data/: data.ttl  ld.ttl
include/: DLDI.hpp  DLDI_Composer.hpp  DLDI_enums.hpp  Iterator.hpp  QuantifiedTriple.hpp  TriplesIterator.hpp
include/TripleIterators/: AllTriplesIterator.hpp  SingleTripleIterator.hpp  TriplesFilteredByOnePositionIterator.hpp  TriplesFilteredByTwoPositionsIterator.hpp  binary_search.hpp
include/dictionary/: DictionariesHandle.hpp  Dictionary.hpp
include/dictionary/trie/: DataTypes.hpp  OutEdgeIterator.hpp  TermIterator.hpp  TermStringIterator.hpp  Trie.hpp
src/: AnyPositionTermIterator.cpp  BinaryStreamWriter.hpp  Composer.cpp  Composer.hpp  DLDI.cpp  DLDI_compose.cpp
src/cli/: cli.hpp  compose.cpp  main.cpp  query-terms.cpp  query-triples.cpp  query.cpp
src/dictionary/: Dictionary.cpp
src/dictionary/trie/: LabelComparator.cpp  LabelComparator.hpp  PathCharIterator.cpp  PathCharIterator.hpp  TermIterator.cpp  TermStringIterator.cpp  Trie.cpp  TrieNavigator.cpp  TrieNavigator.hpp
src/dictionary/trie/DataManager/: DataManager.cpp  DataManager.hpp  README.md  edge-labels.cpp  edges.cpp  internal-nodes.cpp  leaf-nodes.cpp  load.cpp  out-edges.cpp  save.cpp  utils.hpp
src/dictionary/trie/OutEdgeIterator/: memory.cpp  mmapped.cpp  wrapper.cpp
src/dictionary/trie/TrieAlgorithm/: TrieAlgorithm.hpp  id_to_string.cpp  insert.cpp  remove.cpp  scope.cpp  string_to_id.cpp
src/rdf/: LibzSerdStream.hpp  SerdParser.cpp  SerdParser.hpp
src/triples/: TriplesIterator.cpp  TriplesReader.cpp  TriplesReader.hpp  TriplesWriter.cpp  TriplesWriter.hpp
test/: CMakeLists.txt  test.cpp
test/data/: combined.ttl  prefixed-1.nt  prefixed-2.nt  rem-1.ttl  rem-2.ttl
tests/merge-test-1/: run.sh
tests/merge-test-1/data/: add-1.ttl  add-2.ttl
